Fixes #17 - Header issue on docs.laminas.dev on Safari

--- a/asset/sass/blocks/_navbar.scss
+++ b/asset/sass/blocks/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
     border: none;
+    flex-shrink: 0;
 
     a {
         &:focus {
